--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 @import '../src/styles/variables.scss';
 @import '../src/styles/browser-reset.scss';
+@import '../src/styles/material-theme.scss';
