--- a/src/styles/browser-reset.scss
+++ b/src/styles/browser-reset.scss
@@ -17,6 +17,7 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
   border: 0;
   font: inherit;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
   font-size: 100%;
   margin: 0;
   padding: 0;
@@ -59,6 +60,10 @@ html {
   -webkit-font-smoothing: antialiased;
   -webkit-overflow-scrolling: touch;
 }
+html,
+body {
+  height: 100%;
+}
 b, strong {
   font-weight: 600;
 }
@@ -71,6 +76,12 @@ input[type="search"] {
 input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button {
   -webkit-appearance: none;
+}
+form {
+  font-size: 16px;
+  > * {
+    width: 100%;
+  }
 }
 @media (prefers-reduced-motion: reduce) {
   * {
