Added missing test for submit button in LoginForm component test

--- a/src/app/modules/login/components/login-form.component.html
+++ b/src/app/modules/login/components/login-form.component.html
@@ -26,8 +26,8 @@
       matInput>
   </mat-form-field>
   <button
+    id="loginButton"
     color="primary"
-    mat-raised-button>
-    Login
-  </button>
+    type="submit"
+    mat-raised-button>Login</button>
 </form>
