--- a/src/app/modules/login/login.page.html
+++ b/src/app/modules/login/login.page.html
@@ -1,4 +1,4 @@
 <section id="loginPage">
   <h1>Enter in MyFlix</h1>
-  <login-form></login-form>
+  <login-form (onSubmit)="login($event)"></login-form>
 </section>
