--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,4 +6,47 @@
   router-outlet {
     display: none;
   }
+  header {
+    background-color: var(--primary-color);
+    display: grid;
+    grid-template-columns: 1fr 10%;
+    button.profile-btn {
+      align-self: center;
+      align-items: center;
+      background-color: var(--secondary-color);
+      border-radius: 50%;
+      display: flex;
+      height: 50px;
+      justify-content: center;
+      justify-self: center;
+      outline: none;
+      position: relative;
+      text-transform: uppercase;
+      width: 50px;
+      &:hover {
+        cursor: pointer;
+      }
+      :focus {
+        outline: none;
+      }
+      > span {
+        align-items: center;
+        background-color: white;
+        border-radius: 50%;
+        color: var(--secondary-color);
+        display: flex;
+        height: 40px;
+        justify-content: center;
+        width: 40px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 499px) {
+  :host {
+    header {
+      grid-template-columns: 1fr 20%;
+    }
+  }
 }
