--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,7 +13,7 @@
     button.profile-btn {
       align-self: center;
       align-items: center;
-      background-color: var(--secondary-color);
+      background-color: transparent;
       border-radius: 50%;
       display: flex;
       height: 50px;
@@ -31,13 +31,23 @@
       }
       > span {
         align-items: center;
-        background-color: white;
+        background-color: transparent;
         border-radius: 50%;
         color: var(--secondary-color);
         display: flex;
-        height: 40px;
+        font-size: 28px;
+        font-weight: 500;
         justify-content: center;
-        width: 40px;
+        z-index: 3;
+      }
+      img {
+        position: absolute;
+        &.img-bg-one {
+          z-index: 2;
+        }
+        &.img-bg-two {
+          z-index: 1;
+        }
       }
     }
   }
