Added profile picture thumbail to the the header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,17 +8,26 @@
     class="profile-btn"
     aria-label="Go to profile detail page"
     type="button">
-    <img
-      src="assets/header-profile-bg-1.svg"
-      alt="profile background one"
-      class="img-bg-one"
-      >
-    <img
-      src="assets/header-profile-bg-2.svg"
-      alt="profile background two"
-      class="img-bg-two"
-      >
-    <span>{{ activeProfile.name.split('')[0] }}</span>
+    <ng-container *ngIf="!activeProfile.picture" >
+      <img
+        src="assets/header-profile-bg-1.svg"
+        alt="profile fallback background one"
+        class="img-bg-one"
+        >
+      <img
+        src="assets/header-profile-bg-2.svg"
+        alt="profile fallback background two"
+        class="img-bg-two"
+        >
+      <span>{{ activeProfile.name.split('')[0] }}</span>
+    </ng-container>
+    <ng-container *ngIf="activeProfile.picture">
+      <img
+        [src]="activeProfile.picture"
+        class="profile-picture"
+        alt="profile picture"
+        >
+    </ng-container>
   </button>
 </header>
 <header *ngIf="!activeProfile"></header>
