Added link to home page into the header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header *ngIf="activeProfile">
   <div class="header-content">
-    <!-- TODO: Implement -->
+    <a routerLink="">MyFlix</a>
   </div>
   <button
     [title]="activeProfile.name"
