Added breadcrumb to the profile page

--- a/src/app/modules/profile/profile.page.html
+++ b/src/app/modules/profile/profile.page.html
@@ -1,4 +1,5 @@
 <section id="profile-page">
+  <mf-breadcrumb [breadcrumbs]="breadcrumbs"></mf-breadcrumb>
   <mat-card *ngIf="activeProfile">
     <mat-card-header>
       <mat-card-title>{{activeProfile.name}}</mat-card-title>
