Added features to the dashboard
- Movie selection cards
- Top 5 watched movies in Brazil

--- a/src/app/modules/dashboard/dashboard.page.html
+++ b/src/app/modules/dashboard/dashboard.page.html
@@ -1,1 +1,36 @@
-<h1>This is the dashboardPage</h1>
+<h1 class="section-title">Movies Available</h1>
+<section id="movies-available">
+  <ng-container *ngFor="let movie of movies">
+    <mat-card class="movie-card">
+      <mat-card-header>
+        <mat-card-title>{{movie.name}}</mat-card-title>
+      </mat-card-header>
+      <div class="img-container">
+        <img
+          [src]="movie.banner"
+          alt="Movie banner photo"
+          mat-card-image
+          >
+      </div>
+      <mat-card-content>
+        <p [title]="movie.description">
+          {{movie.description}}
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <!-- TODO: Compute watch to the user -->
+        <button color="primary" mat-button>WATCH</button>
+      </mat-card-actions>
+    </mat-card>
+  </ng-container>
+</section>
+<h1 class="section-title">Top 5 watched movies in Brazil</h1>
+<section id="top-watched-movies">
+  <mat-list>
+    <ng-container *ngFor="let topMovie of topMoviesWatchedInBrazil; let i = index">
+      <mat-list-item role="listitem">{{ (i+1) }} - {{ topMovie.name }} - {{ topMovie.views }} views</mat-list-item>
+    </ng-container>
+  </mat-list>
+</section>
+<!-- TODO: Add Top 3 users who must watched the movies -->
+<!-- TODO: Add genres with most watched -->
