--- a/src/app/modules/dashboard/dashboard.page.scss
+++ b/src/app/modules/dashboard/dashboard.page.scss
@@ -3,6 +3,9 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  &:last-child {
+    margin-bottom: 100px;
+  }
   .section-title {
     font-size: 30px;
     font-weight: 600;
@@ -52,6 +55,9 @@
 
 @media screen and (max-width: 499px) {
   :host {
+    &:last-child {
+      margin-bottom: 50px;
+    }
     section#dashboard {
       display: grid;
       grid-template-columns: 1fr;
