Added async pipe to movies list

--- a/src/app/modules/dashboard/dashboard.page.html
+++ b/src/app/modules/dashboard/dashboard.page.html
@@ -1,6 +1,6 @@
 <h1 class="section-title">Movies Available</h1>
 <section id="movies-available">
-  <ng-container *ngFor="let movie of movies">
+  <ng-container *ngFor="let movie of movies | async">
     <mat-card class="movie-card">
       <mat-card-header>
         <mat-card-title>{{movie.name}}</mat-card-title>
