--- a/src/app/modules/profile/profile.page.html
+++ b/src/app/modules/profile/profile.page.html
@@ -1,10 +1,10 @@
 <section id="profile-page">
   <mf-breadcrumb [breadcrumbs]="breadcrumbs"></mf-breadcrumb>
-  <mat-card *ngIf="activeProfile">
+  <mat-card *ngIf="(profileObs | async) as profile">
     <mat-card-header>
-      <mat-card-title>{{activeProfile.name}}</mat-card-title>
+      <mat-card-title>{{profile.name}}</mat-card-title>
     </mat-card-header>
-    <img mat-card-image [src]="'/assets/' + activeProfile.picture" alt="Profile picture">
+    <img mat-card-image [src]="'/assets/' + profile.picture" alt="Profile picture">
     <mat-card-content>
       <mat-card-title>Profile Info</mat-card-title>
       <mat-form-field>
@@ -13,7 +13,7 @@
             id="name"
             name="name"
             type="text"
-            [(ngModel)]="activeProfile.name"
+            [(ngModel)]="profile.name"
             readonly
             matInput>
       </mat-form-field>
@@ -23,13 +23,13 @@
             id="email"
             name="email"
             type="text"
-            [(ngModel)]="activeProfile.email"
+            [(ngModel)]="profile.email"
             readonly
             matInput>
       </mat-form-field>
       <mat-card-subtitle>Last 5 watched movies</mat-card-subtitle>
       <mat-chip-list>
-        <ng-container *ngFor="let movie of activeProfile.movies">
+        <ng-container *ngFor="let movie of profile.movies">
           <mat-chip>{{ movie.name }}</mat-chip>
         </ng-container>
       </mat-chip-list>
